--- a/media/shelved/myst-2021.md
+++ b/media/shelved/myst-2021.md
@@ -9,3 +9,26 @@ finished: 2025-11-5T08:15:00.00-04:00
 score: 3
 ---
 
+I've got a long history with this game. I first played it as a child back in the early 90s on my uncle's computer. I had no idea what I was doing, and it's doubtful that I solved a single puzzle. I tried the series again later, sometime in the early 00s, when I got both Myst IV and Uru. I made it further this time, and I really enjoyed what I played of them, but I was still absolutely stumped before long. Finally, later in the 00s (when I was in college), I actually beat through Myst and most of Riven—though I'm almost sure I used a guide a few times. Still, I loved the experience.
+
+There's something really special about a game that forces you to take notes. During my late 00s playthrough, I remember keeping a journal, much like the ones found in the game. As cheesy as that is, it really added to the experience. I was an archeologist rediscovering lost worlds, piecing together clues, and solving the mysteries of the past. (I enjoyed it so much that I almost changed my major, haha.)
+
+Though I puttered out somewhere in Riven (and dropped out of college—a story for another time), I remembered my fondness for the series years later when I saw a Kickstarter for a new game by Cyan: Obduction. I backed it and their next game: Firmament. And recently, after snagging a recent Humble Bundle, my collection is complete.
+
+Finally, it was time to return to the Island of Myst.
+
+It wasn't as hard as I remembered. While foggy memories still swam in my head from the last time I played, none were clear enough to aid me much. Each puzzle was solved as if it were new. And they were solved... Easily? Listen, I'm not trying to brag or anything, but this game wasn't as hard as I remembered. Maybe it was the graphical makeover or the freedom of movement, or perhaps my memories were masquerading as cleverness without my knowledge, but I breezed through without being stumped on a single puzzle for more than a few minutes.
+
+Speaking of the "improved" graphics and movement "freedom"—perhaps you can guess by the quotes where this is going—what a downgrade. There was a charm to the original version of Myst, with its perendered views that you stepped through like a slideshow and its live-action cutscenes that sometimes lacked in the acting department. (At least there's an option to switch back to the live-action video; no such luck for movement, though.) Now it just looks like every other Unreal Engine game. And while the VR addition was neat, the tradeoff wasn't worth it. (Though admittedly, the novelty of virtual reality has almost completely worn off for me.)
+
+There's definitely some jank, and not always the charming kind.
+
+Even with my respectable PC, the game stuttered often. Any time I turned my view too quickly, I was met by a few-millisecond pause or two.
+
+The menus worked inconsistently. Some things that looked like they should be clickable weren't. Other options seemed to appear in multiple places.
+
+The journal feature, with its camera and notes, was pretty useless. It just takes so much time and struggle to switch back and forth. I ended up using Steam screenshots and notes, in addition to some physical notes on scraps of paper lying around my desk.
+
+Despite all that, Myst is still a great game. I enjoyed (almost) every minute of it and am looking forward to playing through the series in the coming months.
+
+**I recommend it.**
