--- a/media/shelved/myst-2021.md
+++ b/media/shelved/myst-2021.md
@@ -7,6 +7,7 @@ date: 2025-11-5T08:15:00.00-04:00
 started: 2025-10-28T20:00:00.00-04:00
 finished: 2025-11-5T08:15:00.00-04:00
 score: 3
+possed: "https://dice.camp/@cobb/115498039643293196"
 ---
 
 I've got a long history with this game. I first played it as a child back in the early 90s on my uncle's computer. I had no idea what I was doing, and it's doubtful that I solved a single puzzle. I tried the series again later, sometime in the early 00s, when I got both Myst IV and Uru. I made it further this time, and I really enjoyed what I played of them, but I was still absolutely stumped before long. Finally, later in the 00s (when I was in college), I actually beat through Myst and most of Riven—though I'm almost sure I used a guide a few times. Still, I loved the experience.
